--- a/README.rdoc
+++ b/README.rdoc
@@ -5,23 +5,24 @@ application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version: 2.0
 
-* System dependencies
+* System dependencies: rails 4.0
 
-* Configuration
+* Configuration:
 
-* Database creation
+* Database creation:
+    rake db:create
+    rake db:migrate
 
-* Database initialization
+* Database initialization:
 
-* How to run the test suite
+* How to run the test suite:
+    rake db:test:load
 
-* Services (job queues, cache servers, search engines, etc.)
+* Services (job queues, cache servers, search engines, etc.):
 
-* Deployment instructions
-
-* ...
+* Deployment instructions:
 
 
 Please feel free to use a different markup language if you do not plan to run
