--- a/README.rdoc
+++ b/README.rdoc
@@ -1,29 +1,40 @@
-== README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version: 2.0
-
-* System dependencies: rails 4.0
-
-* Configuration:
-
-* Database creation:
-    rake db:create
-    rake db:migrate
-
-* Database initialization:
-
-* How to run the test suite:
-    rake db:test:load
-
-* Services (job queues, cache servers, search engines, etc.):
-
-* Deployment instructions:
+TO-DO list
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Dependencies
+------------------------------------------------------------------------
+Ruby 2.0.0-p195
+Bundler 1.3.5
+Rails 4.0.0
+factory girl rails 4.2.1
+
+Bootstrap
+------------------------------------------------------------------------
+Clone the application.
+Just run bundle install and you should be good to go.
+
+
+Database creation
+------------------------------------------------------------------------
+rake db:create
+rake db:migrate
+
+
+Test
+------------------------------------------------------------------------
+
+
+Database Population
+------------------------------------------------------------------------
+
+
+Testing
+------------------------------------------------------------------------
+We're using a Rspec 2.14.1 and factory girl.
+run the test suite:
+  rake db:test:load
+
+Server
+------------------------------------------------------------------------
+rails s
