Issue #4 - Create a populator

--- a/README.rdoc
+++ b/README.rdoc
@@ -27,6 +27,7 @@ Test
 
 Database Population
 ------------------------------------------------------------------------
+rake db:populate
 
 
 Testing
