--- a/README.rdoc
+++ b/README.rdoc
@@ -4,21 +4,22 @@ TO-DO list
 
 Dependencies
 ------------------------------------------------------------------------
-Ruby 2.0.0-p195
-Bundler 1.3.5
-Rails 4.0.0
-factory girl rails 4.2.1
+  Ruby 2.0.0-p195
+  Bundler 1.3.5
+  Rails 4.0.0
+  factory girl rails 4.2.1
 
 Bootstrap
 ------------------------------------------------------------------------
 Clone the application.
-Just run bundle install and you should be good to go.
+Just run and you should be good to go.
+  bundle install
 
 
 Database creation
 ------------------------------------------------------------------------
-rake db:create
-rake db:migrate
+  rake db:create
+  rake db:migrate
 
 
 Test
@@ -27,7 +28,7 @@ Test
 
 Database Population
 ------------------------------------------------------------------------
-rake db:populate
+  rake db:populate
 
 
 Testing
@@ -38,4 +39,4 @@ run the test suite:
 
 Server
 ------------------------------------------------------------------------
-rails s
+  rails s
